--- a/source/_posts/408错漏知识.md
+++ b/source/_posts/408错漏知识.md
@@ -168,10 +168,22 @@ int main(){
 
 ![](/img/24507.jpg)
 
+#### 并查集三个阶段的时间复杂度
+
+![](/img/194218.jpg)
+
 ### 图
 
 * 只有在无向图中，DFS的调用次数=连通分量的个数
   * 有向图中因为强连通分量要求互相之间都有去往边，而DFS只保证有从一个顶点向另一个顶点的边，不保证有反向的边
+* 无向图判环
+  * DFS或BFS或并查集或拓扑排序
+* 有向图判环
+  * DFS和拓扑排序或并查集
+* 使用邻接矩阵表示图的时候，可以直接访问矩阵元素获取边，因此增删查的时间复杂度为O(1)
+* prim算法中，当同时有两个代价相同的顶点时，优先将**编号更小的顶点**加入MST
+* kruskal算法中，当多边权值相同时，**起点编号更小的边**排在前面
+* 有向无环图仅仅在存在一条路径可以包含其所有顶点的情况下，有**唯一**的拓扑排序方式，这时，拓扑排序与他们在这条路径中出现的顺序相同
 
 #### 图的顶点和边的关系
 
@@ -206,14 +218,17 @@ int main(){
 * 事件Vk的最早发生时间Ve(k)
   * 即**max{以k结点为弧头的所有边 的弧尾事件 的最早发生时间+该边权值}**
   * 计算该值时，可以从前往后，从源点出发，每输出一个入度为0的顶点时，计算它所有直接后继顶点的最早发生时间，如果大于则更新
+  * **源点到Vk的最长路径长度**
 * 事件Vk的最迟发生时间Vl(k)
   * 即**min{以k为弧尾的所有边 的弧头事件 的最迟发生时间-该边权值}**
   * 计算该值时，可以从后往前，从汇点（终点）出发，利用记录拓扑序列的栈，从栈顶出发，以此计算所有直接前驱节点k的最迟发生时间，小于则更新
+  * **总长度-这个点到终点最长路径的时间**
 * 活动Ai的最早开始时间E(i)
   * **E(i)=Ve(k)**，**Vk是弧尾事件**，因为只有事件Vk能开始做，活动Ai才能开始做
 * 活动Ai的最迟开始时间L(i)
   * **L(i)=Vl(j)-Weight(Vk,Vj)**
-  * 即**该边弧头活动的最迟发生时间-该边的权值**
+  * 即**该边弧头事件的最迟发生时间-该边的权值**
+  * **总长度-这个边的弧头到终点的最长路径-这个边的权值**
 * 活动Ai完成的时间余量D(i)
   * **D(i)=l(i)-e(i)**
   * **活动余量为0/最迟开始时间=最早开始时间的活动是关键活动**
