--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -2798,6 +2798,8 @@ int main()
 * 十字链表是对邻接矩阵的优化，实际上也可以存无向图
 * 邻接矩阵和十字链表无法存重边，邻接表和邻接多重表可以存重边
 * 三元组表也能存重边
+* 判断dijkstra算法最短路径的快捷方法
+  * 直接看每个点到起点的距离，然后从小到大排序
 
 ## 算法题刷题
 
@@ -2862,6 +2864,9 @@ int main()
 * [108. 将有序数组转换为二叉搜索树 - 力扣（LeetCode）](https://leetcode.cn/problems/convert-sorted-array-to-binary-search-tree/description/)
 * [958. 二叉树的完全性检验 - 力扣（LeetCode）](https://leetcode.cn/problems/check-completeness-of-a-binary-tree/description/)
 * [109. 有序链表转换二叉搜索树 - 力扣（LeetCode）](https://leetcode.cn/problems/convert-sorted-list-to-binary-search-tree/description/)
+* [1334. 阈值距离内邻居最少的城市 - 力扣（LeetCode）](https://leetcode.cn/problems/find-the-city-with-the-smallest-number-of-neighbors-at-a-threshold-distance/description/)
+* [210. 课程表 II - 力扣（LeetCode）](https://leetcode.cn/problems/course-schedule-ii/description/)
+* 
 
 ## 算法积累
 
@@ -4386,6 +4391,77 @@ void Union(int s[],int root1,int root2){
 
 ### 图
 
+#### 图的邻接矩阵存储结构
+
+```c++
+#define MAX 100
+struct mgraph
+{
+    int numvertex;//图中实际的顶点数
+    int numedges;//图中实际的边数
+    char vertexlist[MAX];//顶点表
+    int edges[MAX][MAX];
+};
+//计算某个顶点的入度
+int indegree(mgraph graph,char v){
+    int index=-1;
+    int count=0;
+    //查找顶点v在定点表中的索引
+    for(int i = 0;i<graph.numvertex;i++){
+        if(graph.vertexlist[i]==v){
+            index=i;
+            break;
+        }
+    }
+    if(index==-1){
+        return -1;
+
+    }
+    for (int i = 0; i < graph.numvertex; i++)
+    {
+        if (graph.edges[i][index]!=0)
+        {
+            count++;
+        }
+        
+    }
+    return count;
+    
+
+}
+//计算某个顶点的出度
+int outdegree(mgraph graph,char v){
+    int index=-1;
+    int count=0;
+    //查找顶点v在顶点表中的索引
+    for (int i = 0; i < graph.numvertex; i++)
+    {
+        if (graph.vertexlist[i]==v)
+        {
+            index=i;
+            break;  
+        }
+        
+    }
+    //如果没有找到顶点v，返回-1表示错误
+    if (index==-1)
+    {
+        return -1;
+    }
+    //遍历邻接矩阵的该顶点对应的行，检查是否有从该顶点出发的边
+    for (int i = 0; i < graph.numvertex; i++)
+    {
+        if (graph.edges[index][i]!=0)
+        {
+            count++;
+        }
+        
+    }
+    return count;
+    
+}
+```
+
 #### 图的邻接表存储结构体
 
 ```c++
@@ -4398,10 +4474,668 @@ struct vnode//顶点表结点
 {
     char data;//顶点信息
     arcnode *first;//指向第一条依附该顶点的弧的指针
+}*graph[10];//定义一个拥有10个顶点的图（邻接表法）
+//书上定义方式
+#define MAX 1000
+struct arcnode//边表节点
+{
+    int adjvex;//该弧指向的顶点位置
+    arcnode* next;//指向下一条弧的指针
 };
-vnode graph[10];//定义一个拥有10个顶点的图（邻接表法）
+struct vnode//顶点表结点
+{
+    char data;//顶点信息
+    arcnode *first;//指向第一条依附该顶点的弧的指针
+};
+struct graph
+{
+    int numvertex;
+    int numedge;
+    vnode vertex[MAX];  
+};
+//计算某个顶点的入度
+int indegree(graph graph,char v){
+    int index=-1;
+    int count=0;
+    //找到v在顺序表中的下标
+    for (int i = 0; i < graph.numvertex; i++)
+    {
+       if (graph.vertex[i].data==v)
+       {
+        index=i;
+        break;
+       }
+       
+    }
+    //如果未找到顶点v，返回-1表示错误
+    if (index==-1)
+    {
+        return -1;
+
+    }
+    //遍历每个单链表，找到指向v的边，并计数
+    for (int i = 0; i < graph.numvertex; i++)
+    {
+        arcnode*p=graph.vertex[i].first;
+        while (p)
+        {
+            if(p->adjvex==index){
+                count++;
+            }
+            p=p->next;
+        }
+        return count;
+    }
+    
+}
+//计算某个顶点的出度
+int outdegree(graph graph,char v){
+    //查找顶点v对应的出度
+    for (int i = 0; i < graph.numvertex; i++)
+    {
+        if (graph.vertex[i].data==v)
+        {
+            int count =0;
+            arcnode*p=graph.vertex[i].first;
+            while (p)
+            {
+                count++;
+                p=p->next;
+            }
+            return count;
+        }
+        
+    }
+    //如果查找失败，返回-1表示计算失败
+    return -1;
+}
+
+```
+
+#### 十字链表存储结构
+
+```c++
+#define MAXV 1000
+struct arcnode
+{
+    int tailvex;
+    int headvex;
+    arcnode* hlink,*tlink;
+    int weight; 
+};
+struct vnode
+{
+    char data;
+    arcnode * firstin,*firstout;
+};
+struct graph
+{
+    int numvertex;
+    int numedge;
+    vnode vertex[MAXV];
+};
 
 
+
+
+```
+
+#### 邻接多重表存储结构
+
+```c++
+#define MAXV 1000
+struct arcnode
+{
+    int i,j;
+    arcnode*ilink,*jlink;
+};
+struct vnode
+{
+    char data;
+    arcnode* first;
+};
+struct graph
+{
+    int vertexnum;
+    int edgenum;
+    vnode vertex[MAXV];
+};
+
+
+
+```
+
+
+
+#### 基于BFS/DFS的拓扑排序
+
+```c++
+//BFS
+#include <iostream>
+#include <cstring>
+#include <algorithm>
+
+using namespace std;
+
+const int N = 100010, M = 100010;
+
+int n, m;
+struct Node
+{
+    int id;
+    Node* next;
+    Node(int _id): id(_id), next(NULL) {}
+}*head[N];
+int d[N], q[N];
+
+void add(int a, int b)
+{
+    auto p = new Node(b);
+    p->next = head[a];
+    head[a] = p;
+}
+
+bool topsort()
+{
+    int hh = 0, tt = -1;
+    for (int i = 1; i <= n; i ++ )
+        if (!d[i])
+            q[ ++ tt] = i;
+
+    while (hh <= tt)
+    {
+        int t = q[hh ++ ];
+        for (auto p = head[t]; p; p = p->next)
+            if ( -- d[p->id] == 0)
+                q[ ++ tt] = p->id;
+    }
+
+    return tt == n - 1;
+}
+
+int main()
+{
+    scanf("%d%d", &n, &m);
+    while (m -- )
+    {
+        int a, b;
+        scanf("%d%d", &a, &b);
+        d[b] ++ ;
+        add(a, b);
+    }
+
+    if (!topsort()) puts("-1");
+    else
+    {
+        for (int i = 0; i < n; i ++ )
+            printf("%d ", q[i]);
+    }
+
+    return 0;
+}
+```
+
+```c++
+//DFS
+#include <iostream>
+#include <cstring>
+#include <algorithm>
+
+using namespace std;
+
+const int N = 100010, M = 100010;
+
+int n, m;
+struct Node
+{
+    int id;
+    Node* next;
+    Node(int _id): id(_id), next(NULL) {}
+}*head[N];
+int st[N], q[N], top;
+
+void add(int a, int b)
+{
+    auto p = new Node(b);
+    p->next = head[a];
+    head[a] = p;
+}
+
+bool dfs(int u)
+{
+    st[u] = 1;
+
+    for (auto p = head[u]; p; p = p->next)
+    {
+        int j = p->id;
+        if (!st[j])
+        {
+            if (!dfs(j)) return false;
+        }
+        else if (st[j] == 1) return false;
+    }
+
+    q[top ++ ] = u;
+
+    st[u] = 2;
+    return true;
+}
+
+bool topsort()
+{
+    for (int i = 1; i <= n; i ++ )
+        if (!st[i] && !dfs(i))
+            return false;
+    return true;
+}
+
+int main()
+{
+    scanf("%d%d", &n, &m);
+    while (m -- )
+    {
+        int a, b;
+        scanf("%d%d", &a, &b);
+        add(a, b);
+    }
+
+    if (!topsort()) puts("-1");
+    else
+    {
+        for (int i = n - 1; i >= 0; i -- )
+            printf("%d ", q[i]);
+    }
+
+    return 0;
+}
+```
+
+#### 朴素版prim算法
+
+```c++
+#include <iostream>
+#include <cstring>
+#include <algorithm>
+
+using namespace std;
+
+const int N = 510, M = 100010, INF = 0x3f3f3f3f;
+
+int n, m;
+int g[N][N], dist[N];
+bool st[N];
+
+int prim()
+{
+    memset(dist, 0x3f, sizeof dist);
+    dist[1] = 0;
+    int res = 0;
+    for (int i = 0; i < n; i ++ )
+    {
+        int t = -1;
+        for (int j = 1; j <= n; j ++ )
+            if (!st[j] && (t == -1 || dist[t] > dist[j]))
+                 t = j;
+        if (dist[t] == INF) return INF;
+        st[t] = true;
+        res += dist[t];
+        for (int j = 1; j <= n; j ++ )
+            dist[j] = min(dist[j], g[t][j]);
+    }
+    return res;
+}
+
+int main()
+{
+    scanf("%d%d", &n, &m);
+    memset(g, 0x3f, sizeof g);
+    while (m -- )
+    {
+        int a, b, c;
+        scanf("%d%d%d", &a, &b, &c);
+        g[a][b] = g[b][a] = min(g[a][b], c);
+    }
+
+    int res = prim();
+    if (res == INF) puts("impossible");
+    else printf("%d\n", res);
+    return 0;
+}
+```
+
+#### kruskal算法
+
+```c++
+#include <iostream>
+#include <cstring>
+#include <algorithm>
+
+using namespace std;
+
+const int N = 510, M = 100010;
+
+int n, m;
+struct Edge
+{
+    int a, b, c;
+    bool operator< (const Edge& t) const
+    {
+        return c < t.c;
+    }
+}e[M];
+int p[N];
+
+int find(int x)
+{
+    if (p[x] != x) p[x] = find(p[x]);
+    return p[x];
+}
+
+int main()
+{
+    scanf("%d%d", &n, &m);
+    for (int i = 0; i < m; i ++ )
+        scanf("%d%d%d", &e[i].a, &e[i].b, &e[i].c);
+    sort(e, e + m);
+
+    for (int i = 1; i <= n; i ++ ) p[i] = i;
+
+    int res = 0, cnt = n;
+    for (int i = 0; i < m; i ++ )
+    {
+        int a = e[i].a, b = e[i].b, c = e[i].c;
+        if (find(a) != find(b))
+        {
+            res += c;
+            cnt -- ;
+            p[find(a)] = find(b);
+        }
+    }
+
+    if (cnt > 1) puts("impossible");
+    else printf("%d\n", res);
+
+    return 0;
+}
+
+```
+
+#### BFS算法(邻接矩阵)
+
+```c++
+#include <queue>
+#include <iostream>
+#define MAX 100
+using namespace std;
+struct graph
+{
+    int vertexnum;
+    int edgenum;
+    char vertexlist[MAX];
+    int edge[MAX][MAX];
+};
+bool visited[MAX];
+//对于数组下标为v的顶点，找到第一个和他相邻的顶点，并返回该顶点的数组下标
+int firstneighbor(graph G,int v){
+    for (int i = 0; i < G.edgenum; i++)
+    {
+        if (G.edge[v][i])//如果存在边
+        {
+            return i;
+        }
+       
+    
+    }
+      return-1;   
+}
+//对于数组下标为v的顶点，从位置w开始查找和它相邻的顶点，并返回该点的数组下标
+int nextneighbor(graph g,int v,int w){
+    for(int i = w+1;i<g.vertexnum;i++){
+        if (g.edge[v][i])
+        {
+            return i;
+        }
+        
+    }
+    return -1;
+}
+//广度优先遍历
+void bfstraverse(graph g){
+    for (int i = 0; i < g.vertexnum; i++)
+    {
+        visited[i]=0;//将访问标记数组初始化
+    }
+    for(int i = 0;i<g.vertexnum;i++){
+        if(!visited[i])
+            bfs(g,i);
+    }
+    
+}
+//从顶点v出发，广度优先遍历图G
+void bfs(graph g,int v){
+    queue<int>que;//设置一个队列，用来存储顶点的索引
+    visit(g.vertexlist[v]);//访问初始顶点v
+    visited[v]=1;
+    que.push(v);//初始顶点入队
+    while (!que.empty())
+    {
+        int cur=que.front();//用cur来接收队头弹出的顶点索引
+        que.pop();//队头元素出队
+        //检测当前顶点cur的所有邻接点
+        for(int w = firstneighbor(g,cur);w>=0;w=nextneighbor(g,cur,w)){
+            if(!visited[w]){//w为当前顶点cur的尚未访问过的邻接顶点
+                visit(g.vertexlist[w]);//访问w顶点
+                visited[w]=1;//标记访问
+                que.push(w);//访问完将其入队
+
+            }
+        }
+    }
+    
+}
+//实例的visit函数，可以根据需要修改
+void visit(char vertex){
+    cout<<vertex<<" ";
+}
+```
+
+#### BFS算法（邻接表）
+
+```c++
+#include <queue>
+#include <iostream>
+#define MAX 100
+using namespace std;
+struct arcnode//边表节点
+{
+    int adjvex;//该弧指向的顶点位置
+    arcnode* next;//指向下一条弧的指针
+};
+struct vnode//顶点表结点
+{
+    char data;//顶点信息
+    arcnode *first;//指向第一条依附该顶点的弧的指针
+};
+struct graph
+{
+    int numvertex;
+    int numedge;
+    vnode vertex[MAX];  
+};
+bool visited[MAX];
+//广度优先遍历
+void bfstraverse(graph g){
+    for (int i = 0; i < g.numvertex; i++)
+    {
+        visited[i]=0;//将访问标记数组初始化
+    }
+    for(int i = 0;i<g.numvertex;i++){
+        if(!visited[i])
+            bfs(g,i);
+    }
+    
+}
+//从顶点v出发，广度优先遍历图G
+void bfs(graph g,int v){
+    queue<int>que;//设置一个队列，用来存储顶点的索引
+    visit(g.vertex[v].data);//访问初始顶点v
+    visited[v]=1;
+    que.push(v);//初始顶点入队
+    while (!que.empty())
+    {
+        int cur=que.front();//用cur来接收队头弹出的顶点索引
+        que.pop();//队头元素出队
+       arcnode*p=g.vertex[cur].first;//获取当前顶点的次一个邻接点
+       //遍历当前顶点cur的所有邻接点
+       while (p!=nullptr)
+       {
+        int adjindex=p->adjvex;//获取邻接顶点的索引
+        if (!visited[adjindex])
+        {
+            visit(g.vertex[adjindex].data);//访问邻接顶点
+            visited[adjindex]=1;
+            que.push(adjindex);
+        }
+        p=p->next;
+       }
+       
+    }
+    
+}
+//实例的visit函数，可以根据需要修改
+void visit(char vertex){
+    cout<<vertex<<" ";
+}
+```
+
+#### DFS算法（邻接矩阵）
+
+```c++
+#include <iostream>
+using namespace std;
+#define maxv 100
+
+struct graph
+{
+    int vertexnum;
+    int edgenum;
+    char vertex[maxv];
+    int edge[maxv][maxv];
+};
+bool visited[maxv];
+//对于数组下标为v的顶点，找到第一个和他相邻的顶点，并返回该顶点的数组下标
+int firstneighbor(graph G,int v){
+    for (int i = 0; i < G.edgenum; i++)
+    {
+        if (G.edge[v][i])//如果存在边
+        {
+            return i;
+        }
+       
+    
+    }
+      return-1;   
+}
+//对于数组下标为v的顶点，从位置w开始查找和它相邻的顶点，并返回该点的数组下标
+int nextneighbor(graph g,int v,int w){
+    for(int i = w+1;i<g.vertexnum;i++){
+        if (g.edge[v][i])
+        {
+            return i;
+        }
+        
+    }
+    return -1;
+}
+void dfstraverse(graph g){
+    //初始化访问数组
+    for (int  i = 0; i < g.vertexnum; i++)
+    {
+        visited[i]=0;
+    }
+    //对每个顶点进行DFS，防止非连通图未遍历完全
+    for (int i = 0; i < g.vertexnum; i++)
+    {
+        if(!visited[i])
+            dfs(g,i);
+    }
+    
+    
+}
+void dfs(graph g,int v){
+    visit(g.vertex[v]);//访问顶点v
+    visited[v]=1;
+    //对顶点v的每个邻接顶点进行递归dfs
+    for(int w=firstneighbor(g,v);w>=0;w=nextneighbor(g,v,w)){
+        if(!visited[w]){
+            dfs(g,w);
+        }
+    }
+    
+}
+void visit(char vertex){
+    cout<<vertex<<" ";
+}
+
+
+```
+
+#### DFS算法（邻接表）
+
+```c++
+#include <queue>
+#include <iostream>
+#define MAX 100
+using namespace std;
+struct arcnode//边表节点
+{
+    int adjvex;//该弧指向的顶点位置
+    arcnode* next;//指向下一条弧的指针
+};
+struct vnode//顶点表结点
+{
+    char data;//顶点信息
+    arcnode *first;//指向第一条依附该顶点的弧的指针
+};
+struct graph
+{
+    int numvertex;
+    int numedge;
+    vnode vertex[MAX];  
+};
+bool visited[MAX];
+//广度优先遍历
+void dfstraverse(graph g){
+    for (int i = 0; i < g.numvertex; i++)
+    {
+        visited[i]=0;//将访问标记数组初始化
+    }
+    for(int i = 0;i<g.numvertex;i++){
+        if(!visited[i])
+            dfs(g,i);
+    }
+    
+}
+//从顶点v出发，广度优先遍历图G
+void dfs(graph g,int v){
+    visit(g.vertex[v].data);//访问初始顶点v
+    visited[v]=1;
+   //遍历顶点v的所有邻接顶点
+   arcnode*p=g.vertex[v].first;
+   while (p!=nullptr)
+   {
+    if(!visited[p->adjvex]){
+        dfs(g,p->adjvex);
+    }
+    p=p->next;
+   }
+   
+    
+}
+//实例的visit函数，可以根据需要修改
+void visit(char vertex){
+    cout<<vertex<<" ";
+}
 ```
 
 
