--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -2801,6 +2801,38 @@ int main()
 * 判断dijkstra算法最短路径的快捷方法
   * 直接看每个点到起点的距离，然后从小到大排序
 
+### 查找
+
+#### 有序线性表的查找
+
+![](/img/215722.jpg)
+
+#### 二分查找
+
+* (low+high)/2下取整
+* (low+high+1)/2上取整
+  * 二分要保持一致，上取整就一直上取整，下取整就一直下取整
+  * 小于则右端点=mid-1，大于则右端点=mid+1
+  * **平均成功查找长度=log(n+1)-1**
+
+#### 分块查找
+
+![](/img/221442.jpg)
+
+![](/img/221707.jpg)
+
+#### B树和B+树
+
+* 主要用于硬盘或者文件系统管理、数据库
+  * 读写慢
+  * 文件大
+* B树中间的点有信息
+* 而B+树中间的点仅作区分分类用，不保留信息，信息全部存储在根节点
+  * 全部放在叶节点，局部性很好，方便一块读，全在同一层
+* 上取整（m/2）-1=m/2下取整
+
+![](F:\try\home\themes\fluid\source\img\223952.jpg)
+
 ## 算法题刷题
 
 题表：
