--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -2814,6 +2814,9 @@ int main()
   * 二分要保持一致，上取整就一直上取整，下取整就一直下取整
   * 小于则右端点=mid-1，大于则右端点=mid+1
   * **平均成功查找长度=log(n+1)-1**
+* **折半查找中序遍历有序**
+* 判定折半查找判定树：看上下取整是否一致，也就是说上取整要一直上取整，下取整要一直下取整
+  * **快速判定：要么左边一直比右边节点多，要么右子树一直比左子树结点多**
 
 #### 分块查找
 
@@ -2831,7 +2834,12 @@ int main()
   * 全部放在叶节点，局部性很好，方便一块读，全在同一层
 * 上取整（m/2）-1=m/2下取整
 
-![](F:\try\home\themes\fluid\source\img\223952.jpg)
+![](/img/223952.jpg)
+
+* B树向上分裂的时候，中间节点存在上一层的结点，但是B+树向上分裂的时候，由于所有信息存储在叶节点，所以上面分离出去的只是索引节点，而分裂出来的两组叶节点中，双亲结点的信息存储在右边那一组
+  * 如果分裂的是索引节点，则直接分裂不用存多次
+  * **索引节点不需要重复**
+  * B+树每次数据查询的次数都一样，因为都是查找到叶节点
 
 ## 算法题刷题
 
