--- a/source/_posts/备战408（2）.md
+++ b/source/_posts/备战408（2）.md
@@ -1314,7 +1314,7 @@ down(k);up(k);
     bool find(int x)
     {
         int k = (x % N + N) % N;//求出哈希值定位槽位置
-        for (int i = h[k]; i != -1; i = ne[i])//遍历单链表
+        for (int i = h[k]; i != -1; i = ne[i])//遍历单链表//i=-1 等价于~i，因为-1的补码是全1，取反全0
             if (e[i] == x)//判断该槽链表中是否存在x
                 return true;
 
