--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -1704,6 +1704,24 @@ int findmin(int a[],int n){
 }
 ```
 
+```c++
+//y总版本
+int findmissmin(vector<int>&nums){
+		int n = nums.size();
+		vector<bool>hash(n+1);
+		for(int x:nums)
+			if(x>=1 && x<=n)
+				hash[x]=true;
+    	for(int i = 1;i<=n;i++)
+            if(!hash[i])
+                return i;
+    	return n+1;
+                
+}
+```
+
+
+
 ### 2020 线性表
 
 ```c++
@@ -2791,6 +2809,10 @@ int main()
   * 从下往上构造一棵树，每次合并根节点值最小的子树
   * 所有点的度数不为1
   * 一定有一个最优解，使得权值最小的两个点互为兄弟
+  
+* 并查集
+
+  * 按秩合并就是按照大小，小树合到大树
 
 ### 图
 
@@ -2840,6 +2862,27 @@ int main()
   * 如果分裂的是索引节点，则直接分裂不用存多次
   * **索引节点不需要重复**
   * B+树每次数据查询的次数都一样，因为都是查找到叶节点
+
+#### 哈希表
+
+* **拉链法**又称为**开散列法**
+* **开放寻址法**又称为**闭散列法**
+* 负载因子=**已有元素数/数组长度**
+  * **负载因子越低，效率越高**
+* 哈希函数
+  * 乘余取整法：n*(A * x的小数部分)，A是0-1之间的数
+  * 平方取中法：先平方，然后取中间几位
+  * 基数转换法：换成其他进制，然后取其中几位
+* 线性探测法、二次探查法、随即探查法，都容易产生二级聚集问题
+* 查找效率指的是时间，存储效率指的是空间
+* **哈希表的查找失败长度是针对整数域来讲的，也就是说key%M，分母就是1/M，分子0~M-1的对应失败查找次数，要查到空才停止
+
+#### 红黑树
+
+* **所有根节点都是黑色不是指的实结点，而是指的空黑叶节点**
+* **黑路同**，值得也是从任意节点出发，到达任一**空叶节点**的路径上**经过的黑节点数量相同（包括黑空叶节点）**
+* 所有操作的时间复杂度都是**log(n)**
+* **红黑树的删除：单子树直接删，双子树用后继替代，接着递归调整直到符合红黑树的性质**
 
 ## 算法题刷题
 
@@ -5178,7 +5221,148 @@ void visit(char vertex){
 }
 ```
 
+### 查找
 
+#### Hash表
+
+* 存储结构
+
+  * 开放寻址法
+
+  * 拉链法
+
+    ![](/img/001426.jpg)
+
+* 字符串哈希
+
+* 作用：把一个比较庞大的空间（值域）映射到比较小的空间，映射后的函数叫做哈希函数
+
+  * x %10^5 ∈(0,10^5)
+    * 模的数一般要取成质数，所以一般要遍历寻找最小的质数
+  * 冲突：两个不一样的数映射成了同一个数，处理冲突的方式可以分为开放寻址法和拉链法
+
+##### 拉链法
+
+```c++
+(1) 拉链法
+    int h[N], e[N], ne[N], idx;//h[N]是槽，e[N]（值）、ne[N]（下一个位置）是链表
+//memset(h,-1,sizeof h)把槽先清空
+    // 向哈希表中插入一个数
+    void insert(int x)
+    {
+        int k = (x % N + N) % N;//把余数变成正数，k就是x的哈希值，将x插到k槽的单链表中
+        e[idx] = x;//存下x的值
+        ne[idx] = h[k];
+        h[k] = idx ++ ;//链表插入操作
+    }
+
+    // 在哈希表中查询某个数是否存在
+    bool find(int x)
+    {
+        int k = (x % N + N) % N;//求出哈希值定位槽位置
+        for (int i = h[k]; i != -1; i = ne[i])//遍历单链表
+            if (e[i] == x)//判断该槽链表中是否存在x
+                return true;
+
+        return false;
+    }
+```
+
+```
+//寻找质数
+for(int i =  ; ;i++){
+bool flag =true;
+for(int j = 2;j*j<=i;j++)
+	if(i%j==0){
+	flag =false ;
+	break;
+	}
+	if(flag)
+	{
+	cout<<i<<endl
+	break;
+	}
+}
+```
+
+
+
+##### 开放寻址法
+
+* 只开一个数组，但是开的长度一般是输入数据的2-3倍
+
+```c++
+(2) 开放寻址法
+    int h[N];
+//需要定义一个不在数据范围内的null，如0x3f3f3f3f，一般设置最大值,INT_MAX也还是0x3f3f3f3f
+
+memset(h,0x3f,sizeof h);//初始化哈希表
+    //由于x是int类型，一个int四个字节，相当于4个3f，即0x3f3f3f3f
+
+// 如果x在哈希表中，返回x的下标；如果x不在哈希表中，返回x应该插入的位置
+    int find(int x)
+    {
+        int t = (x % N + N) % N;//求哈希值，即映射
+        while (h[t] != null && h[t] != x)//t位置上面有人，并且位置上的值不等于x
+        {
+            t ++ ;//看下一个位置
+            if (t == N) t = 0;//看完了最后一个位置，需要循环看第一个位置
+        }
+        return t;//如果x在哈希表中，返回的就是x的下标，如果x不在哈希表中，返回的就是x应该插入的位置
+    }
+
+//插入一个数字
+h[find(x)]=x;
+//判断数字是否在哈希表中
+if(h[find(x)])== null cout<<"No";
+else cout<<"Yes";
+```
+
+##### 字符串哈希
+
+字符串前缀哈希法
+
+* 先预处理出所有前缀的哈希
+
+  ![](/img/005400.jpg)
+
+  把字符串看成是p进制的数字，每一位上的字母就表示p进制上的每一位数字，然后再取模，就可以把字符串映射到从0到Q-1
+
+  ![](/img/010031.jpg)
+
+* A-Z不能映射成0，一般从1开始
+
+* 字符串哈希假定不存在冲突，因此不考虑冲突
+
+* 好处是可以利用前缀哈希算出来任意一个子串的哈希值
+
+* 作用：
+
+  快速判断两个字符串是否相同，哈希值相同，两个字符串相同，如果哈希值不同，则两个字符串不同
+
+```c++
+核心思想：将字符串看成P进制数，P的经验值是131或13331，取这两个值的冲突概率低
+小技巧：取模的数用2^64，这样直接用unsigned long long存储，溢出的结果就是取模的结果
+
+typedef unsigned long long ULL;
+ULL h[N], p[N]; // h[k]存储字符串前k个字母的哈希值, p[k]存储 P^k mod 2^64
+const int P=131 or 13331 //P进制
+// 初始化
+p[0] = 1;//p的零次方等于1
+for (int i = 1; i <= n; i ++ )
+{
+    h[i] = h[i - 1] * P + str[i];
+    p[i] = p[i - 1] * P;//位数对应的数字，类似于024816
+}
+
+// 计算子串 str[l ~ r] 的哈希值
+ULL get(int l, int r)
+{
+    return h[r] - h[l - 1] * p[r - l + 1];
+}
+```
+
+### 
 
 ### 408中c++stl可用的情况
 
