--- a/source/_posts/408错漏知识.md
+++ b/source/_posts/408错漏知识.md
@@ -244,7 +244,31 @@ int main(){
 
 ### 查找
 
+#### 折半查找
+
+* 有序线性表的顺序查找中，实际上失败节点是不存在的，所以**到达失败节点时所查找的长度=它上面的圆形结点的所在层数**
+* 折半查找的判定树有**n个非叶结点（元素节点）和n+1个方形叶节点（失败结点）**
+* 折半查找的成功ASL=（层数*点数和）/有序表元素数
+  * 折半查找的失败ASL=（方形结点上面的圆形节点所在层数*点数和）/方形结点个数
+* **二分查找的判定树唯一，而二叉排序树的查找不唯一，相同的关键字其插入顺序不同可能生成不同的二叉排序树**
+* 二叉排序树的插入和删除平均时间复杂度是O(logn)，二分查找的插入和删除时间复杂度为O(n)
+
+#### 分块查找
+
+* 分块查找分为索引表和查找表，索引表中每个元素含有**各块的最大关键字和各块中第一个元素的地址**
+
+![](/img/184143.jpg)
+
+#### 二叉排序树（BST）
+
+* 二叉排序树新插入的结点一定是一个叶节点
+* 删除的是有两个孩子的节点：用直接前驱（左子树最右下）或者直接后继（右子树最左下）来替代原节点，然后进行调整
+
 #### 平衡二叉树(AVL)
+
+* 平衡二叉树是对失衡的最小子树的根结点进行调整，每次调整的都是**以插入路径上离插入节点最近的平衡因子的绝对值大于1的结点作为根的子树**
+* LL和RR的单旋操作发生在**最小不平衡子树的根节点和其两个子树构成的三角中**
+* LR和RL的双旋操作，**先**发生在**孩子的子树的根节点构成的三角**，**再**发生在**最小不平衡子树的根节点构成的三角**
 
 * 平衡二叉树的删除
   * 删除的是叶子节点：直接删除
@@ -253,6 +277,19 @@ int main(){
 * 平衡二叉树的结点数计算
 
 ![](/img/30420.jpg)
+
+* **求解给定结点数的平衡二叉树的查找所需的最多比较次数（或树的最大高度）**
+  * n0=0，n1=1，n2=2，nh=nh-1+nh-2+1
+
+#### 红黑树
+
+* 十二字真言
+  * **根叶黑，左根右，黑路同，不红红**
+  * n个结点的红黑树有**n+1个空黑叶节点**
+
+![](F:\try\home\themes\fluid\source\img\94542.jpg)
+
+* **对于一颗动态查找树，若插入和删除操作比较少，查找操作比较多，则采用AVL树比较合适，否则采用红黑树更合适**
 
 #### B树
 
