--- a/source/_posts/408错漏知识.md
+++ b/source/_posts/408错漏知识.md
@@ -290,6 +290,7 @@ int main(){
 ![](F:\try\home\themes\fluid\source\img\94542.jpg)
 
 * **对于一颗动态查找树，若插入和删除操作比较少，查找操作比较多，则采用AVL树比较合适，否则采用红黑树更合适**
+  * 不过广义上来讲，二者的**插入、删除、查找的时间复杂度均为O(logn)** 
 
 #### B树
 
@@ -300,10 +301,23 @@ int main(){
       * 兄弟够借借兄弟
       * 兄弟不够借，合并兄弟节点和自己以及夹在中间的双亲结点
   * 非叶子节点：删除后用直接前驱或者直接后继替代，相当于在叶子节点删除直接前驱或者直接后继
+* **408真题将B树的叶节点定义为最底层的终端节点**
 
 ![](/img/230953.jpg)
 
 ![](/img/31007.jpg)
+
+* B树的查找包括①在B树中找节点；②在节点内找关键字。
+  * 由于B树经常存储在磁盘上，因此
+    * **①操作（在B树中找节点）在磁盘上进行**
+    * **②操作（在节点内找关键字）在内存中进行**
+    * **在磁盘上找到目标节点后，先将节点信息读入内存，然后再采用顺序查找法或折半查找法**
+    * **在磁盘上进行查找的次数即目标节点在B树上的层次数**，决定了B树的查找效率
+
+#### 哈希表
+
+* 开放定址法中的平方探测法，要求k<=m/2，散列表长度m必须是一个可以表示为4k+3的素数
+* **直接定址法不会产生冲突**
 
 ### 排序
 
