--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -2862,6 +2862,15 @@ int main()
   * 如果分裂的是索引节点，则直接分裂不用存多次
   * **索引节点不需要重复**
   * B+树每次数据查询的次数都一样，因为都是查找到叶节点
+* B树的删除情况
+  * 兄弟够借
+    * 删左左旋
+    * 删右右旋
+  * 兄弟不够借
+    * 删左，合并双亲节点一起左旋
+    * 删右，合并双亲结点一起右旋
+* B树和B+树的区别：
+  * B树的关键字和子树个数差1，而B+树关键字个数=子树个数
 
 #### 哈希表
 
@@ -2875,7 +2884,7 @@ int main()
   * 基数转换法：换成其他进制，然后取其中几位
 * 线性探测法、二次探查法、随即探查法，都容易产生二级聚集问题
 * 查找效率指的是时间，存储效率指的是空间
-* **哈希表的查找失败长度是针对整数域来讲的，也就是说key%M，分母就是1/M，分子0~M-1的对应失败查找次数，要查到空才停止
+* **哈希表的查找失败长度是针对整数域来讲的，也就是说key%M，分母就是1/M，分子0~M-1的对应失败查找次数，要查到空才停止**
 
 #### 红黑树
 
