--- a/source/_posts/408错漏知识.md
+++ b/source/_posts/408错漏知识.md
@@ -252,10 +252,12 @@ int main(){
   * 折半查找的失败ASL=（方形结点上面的圆形节点所在层数*点数和）/方形结点个数
 * **二分查找的判定树唯一，而二叉排序树的查找不唯一，相同的关键字其插入顺序不同可能生成不同的二叉排序树**
 * 二叉排序树的插入和删除平均时间复杂度是O(logn)，二分查找的插入和删除时间复杂度为O(n)
+* **小数据量下，线性查找性能更加**
 
 #### 分块查找
 
 * 分块查找分为索引表和查找表，索引表中每个元素含有**各块的最大关键字和各块中第一个元素的地址**
+* **即使在索引表上直接找到了元素，也仍然要进入块内查找，只有在块内找到才是真的找到**
 
 ![](/img/184143.jpg)
 
@@ -280,6 +282,7 @@ int main(){
 
 * **求解给定结点数的平衡二叉树的查找所需的最多比较次数（或树的最大高度）**
   * n0=0，n1=1，n2=2，nh=nh-1+nh-2+1
+* 如果删除的结点是**叶节点**，那么**删除后再插入，树的形态与原来保持不变**，如果删除的结点**不是叶子节点**，那么**删除再插入其形态就会变化**了。
 
 #### 红黑树
 
@@ -287,7 +290,7 @@ int main(){
   * **根叶黑，左根右，黑路同，不红红**
   * n个结点的红黑树有**n+1个空黑叶节点**
 
-![](F:\try\home\themes\fluid\source\img\94542.jpg)
+![](/img/94542.jpg)
 
 * **对于一颗动态查找树，若插入和删除操作比较少，查找操作比较多，则采用AVL树比较合适，否则采用红黑树更合适**
   * 不过广义上来讲，二者的**插入、删除、查找的时间复杂度均为O(logn)** 
@@ -303,6 +306,16 @@ int main(){
   * 非叶子节点：删除后用直接前驱或者直接后继替代，相当于在叶子节点删除直接前驱或者直接后继
 * **408真题将B树的叶节点定义为最底层的终端节点**
 
+![](/img/15934.jpg)
+
+![](/img/220210.jpg)
+
+![](/img/20505.jpg)
+
+![](/img/220524.jpg)
+
+![](/img/220621.jpg)
+
 ![](/img/230953.jpg)
 
 ![](/img/31007.jpg)
@@ -313,11 +326,39 @@ int main(){
     * **②操作（在节点内找关键字）在内存中进行**
     * **在磁盘上找到目标节点后，先将节点信息读入内存，然后再采用顺序查找法或折半查找法**
     * **在磁盘上进行查找的次数即目标节点在B树上的层次数**，决定了B树的查找效率
+* B树的查找时间复杂度为O（logn）
 
 #### 哈希表
 
 * 开放定址法中的平方探测法，要求k<=m/2，散列表长度m必须是一个可以表示为4k+3的素数
+
 * **直接定址法不会产生冲突**
+
+* **失败时，分母是散列函数中的模的值（或者说初次探测可能会落在的区间，即min{散列表长度，散列函数中的模的值}）；成功时，分母是元素个数**
+
+* **数字分析法**
+
+  ![](/img/221721.jpg)
+
+* 平方取中法
+
+  ![](/img/221843.jpg)
+
+* **线性探测法很容易造成同义词、非同义词的聚集“堆积”现象，严重影响查找效率**
+
+  * 只有同义词的不叫聚集，只能叫冲突
+
+* **平方探测法先正再负**
+
+* **双散列法只能缓解聚集现象，而不能避免**
+
+* **开放定址法四种方法的探测覆盖率问题**
+
+  ![](/img/223257.jpg)
+
+#### 查找算法时间复杂度表
+
+![](/img/91010.jpg)
 
 ### 排序
 
