--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -1450,16 +1450,6 @@ void merge_sort(int q[],int l,int r){
 }
 ```
 
-
-
-### 查找的一些代码模板
-
-#### 二分查找
-
-```c++
-
-```
-
 ## 错题本
 
 ### 2010 线性表 三次翻转
@@ -2882,7 +2872,7 @@ int main()
   * 乘余取整法：n*(A * x的小数部分)，A是0-1之间的数
   * 平方取中法：先平方，然后取中间几位
   * 基数转换法：换成其他进制，然后取其中几位
-* 线性探测法、二次探查法、随即探查法，都容易产生二级聚集问题
+* 线性探测法、二次探查法、随机探查法，都容易产生二级聚集问题
 * 查找效率指的是时间，存储效率指的是空间
 * **哈希表的查找失败长度是针对整数域来讲的，也就是说key%M，分母就是1/M，分子0~M-1的对应失败查找次数，要查到空才停止**
 
@@ -2892,6 +2882,10 @@ int main()
 * **黑路同**，值得也是从任意节点出发，到达任一**空叶节点**的路径上**经过的黑节点数量相同（包括黑空叶节点）**
 * 所有操作的时间复杂度都是**log(n)**
 * **红黑树的删除：单子树直接删，双子树用后继替代，接着递归调整直到符合红黑树的性质**
+
+#### 查找算法时间复杂度表
+
+![](/img/91010.jpg)
 
 ## 算法题刷题
 
@@ -5231,6 +5225,237 @@ void visit(char vertex){
 ```
 
 ### 查找
+
+#### 一般线性表的顺序查找
+
+```c++
+struct sstable{
+    int *data;//动态数组基址
+    int tablelen;//表长
+};
+int seq_search(sstable st,int target){
+    st.data[st.tablelen]=target;//设置哨兵
+    for(int i = 0 ;st.data[i]!=target;i++)
+        return i;//查找成功则返回下标，查找失败则返回表长
+}
+```
+
+#### 有序表的顺序查找
+
+```c++
+int seq_search(SSTable ST, int target) {
+    for (int i = 0; i < ST.tablelen && ST.elem[i] <= target; ++i) {
+        if (ST.elem[i] == target) {
+            return i;   // 找到了
+        }
+    }
+    return -1;  // 循环结束还没找到 -> 失败
+}
+
+```
+
+#### 二分查找
+
+```c++
+//不区分开闭，左闭右闭
+#include <bits/stdc++.h>
+using namespace std;
+int binary_search(vector<int> nums,int target){
+    int l = 0,r=nums.size()-1,mid;
+    while (l<=r)
+    {
+        mid=l+(r-1)/2;
+        if(nums[mid]==target)return mid;//查找成功返回坐标
+        else if(nums[mid]>target) r=mid-1;//从前半部分继续查找
+        else l = mid+1;//从后半部分继续查找
+    }
+    return -1;//查找失败，返回-1；
+}
+```
+
+二分不用考虑有没有解
+
+![](/img/201805.jpg)
+
+###### 整数二分
+
+* 有单调性的题目可以二分，但可以二分不一定有单调性，二分的本质不是单调性
+* 二分的本质是性质，使得一部分满足红色性质，一部分满足绿色性质，整个区间可以一分为二，二分可以寻找性质的边界
+
+![](/img/010256.jpg)
+
+①红点
+
+* mid=l+r+1>>1;
+
+  if(check(mid))  true ->[mid,r]  l = mid;//mid满足红色性质
+
+  ​                          false->[l,mid-1]  r = mid-1;//mid不满足红色性质，在绿色性质区域
+
+②绿点
+
+* mid = l+r>>1;
+
+  if(check(mid))  true->[l,mid] r = mid;//mid满足绿色性质
+
+  ​                          false->[mid+1,r] l = mid+1;//mid满足红色性质，不满足绿色性质
+
+```c++
+//mid属于绿色区域
+bool check(int x) {/* ... */} // 检查x是否满足某种性质
+// 区间[l, r]被划分成[l, mid]和[mid + 1, r]时使用，即如果更新方式是r=mid,l=mid+1;
+int bsearch_1(int l, int r)
+{
+    while (l < r)
+    {
+        int mid = l + r >> 1;
+        if (check(mid)) r = mid;    // check()判断mid是否满足绿色性质
+        else l = mid + 1;
+    }
+    return l;
+}
+```
+
+```c++
+//mid属于红色区域
+// 区间[l, r]被划分成[l, mid - 1]和[mid, r]时使用,即如果更新方式是l=mid,r=mid-1;
+int bsearch_2(int l, int r)
+{
+    while (l < r)
+    {
+        int mid = l + r + 1 >> 1;
+        if (check(mid)) l = mid;//判断mid是否满足红色性质
+        else r = mid - 1;
+    }
+    return l;
+}
+```
+
+###### 浮点数二分
+
+注：判断是否满足绿色性质
+
+```c++
+bool check(double x) {/* ... */} // 检查x是否满足某种性质
+
+double bsearch_3(double l, double r)
+{
+    const double eps = 1e-6;   // eps 表示精度，取决于题目对精度的要求，比要求的位数多2
+    while (r - l > eps)
+    {
+        double mid = (l + r) / 2;
+        if (check(mid)) r = mid;
+        else l = mid;
+    }
+    return l;
+}
+```
+
+#### 二叉搜索树
+
+##### 查找
+
+```c++
+#include <bits/stdc++.h>
+using namespace std;
+struct treenode
+{
+    int val;
+    treenode *left,*right;
+    treenode(int x) : val(x),left(nullptr),right(nullptr){}
+};
+treenode *bstsearch(treenode *root,int num){
+    treenode* cur =root;
+    while (cur!=nullptr)
+    {
+        if(cur->val<num)
+            cur=cur->right;//目标结点在cur的右子树
+        else if(cur->val>num)
+            cur=cur->left;//目标节点在cur的左子树
+            else break;    
+    }
+    return cur;
+    
+}
+```
+
+##### 插入
+
+```c++
+#include <bits/stdc++.h>
+using namespace std;
+struct treenode
+{
+    int val;
+    treenode *left,*right;
+    treenode(int x):val(x),left(nullptr),right(nullptr){}
+};
+void insert(treenode *&root,int num){
+    if(root=nullptr)return;//如果根节点为空，直接返回
+    treenode* cur =root,*pre=nullptr;
+    while (cur!=nullptr)
+    {
+        if(cur->val==num)return;//如果找到了与待插入值相等的结点，则直接返回；
+        pre=cur;
+        if(cur->val<num)
+            cur=cur->right;//目标结点在cur的右子树
+        else if(cur->val>num)
+            cur=cur->left;//目标节点在cur的左子树
+        
+    }
+    //找到位置后开始执行插入操作
+    treenode *node=new treenode(num);
+    if(pre->val<num)pre->right=node;
+    else pre->left=node;
+
+    
+}
+
+```
+
+##### 二叉搜索树的构造
+
+```c++
+#include <bits/stdc++.h>
+using namespace std;
+struct treenode
+{
+    int val;
+    treenode *left,*right;
+    treenode(int x):val(x),left(nullptr),right(nullptr){}
+};
+void insert(treenode *&root,int num){
+    if(root=nullptr)return;//如果根节点为空，直接返回
+    treenode* cur =root,*pre=nullptr;
+    while (cur!=nullptr)
+    {
+        if(cur->val==num)return;//如果找到了与待插入值相等的结点，则直接返回；
+        pre=cur;
+        if(cur->val<num)
+            cur=cur->right;//目标结点在cur的右子树
+        else if(cur->val>num)
+            cur=cur->left;//目标节点在cur的左子树
+        
+    }
+    //找到位置后开始执行插入操作
+    treenode *node=new treenode(num);
+    if(pre->val<num)pre->right=node;
+    else pre->left=node;
+
+    
+}
+void create_bst(treenode *&root,vector<int> str){
+    root=nullptr;//初始时root为空树
+    int n = str.size();
+    //调用插入节点函数依次将关键字插入BST中
+    for(int i = 0;i<n;i++){
+        insert(root,str[i]);
+    }
+}
+
+```
+
+
 
 #### Hash表
 
